Fixed spacing and sizing issues throughout

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -39,8 +39,8 @@
     background-image: $background-image;
     background-position: center;
     background-size: cover;
-    height: 50vw;
-    max-height: 80vh;
+    height: 60vw;
+    max-height: 100vh;
 }
 
 // Fonts
